--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "cubic-bezier-timing-function",
   "version": "0.3.0",
   "description": "cubic bezier timing function generator",
-  "main": "index.js",
+  "main": "dist/cbtf.common.js",
+  "module": "dist/cbtf.esm.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rollup --config",
+    "prepublishOnly": "rm -rf dist/ && npm run build"
   },
   "repository": {
     "type": "git",
@@ -19,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/RRDAWLX/cubic-bezier-timing-function/issues"
   },
-  "homepage": "https://github.com/RRDAWLX/cubic-bezier-timing-function#readme"
+  "homepage": "https://github.com/RRDAWLX/cubic-bezier-timing-function#readme",
+  "devDependencies": {
+    "rollup": "^2.60.0",
+    "rollup-plugin-terser": "^7.0.2"
+  }
 }
